Se añade bootstrap a main.scss

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,7 +5,7 @@
 @import 'abstracts/mixins';
 @import 'abstracts/placeholders';
 
-@import 'vendors/bootstrap';
+@import 'vendors/bootstrap_4.6/bootstrap.scss';
 @import 'vendors/jquery-ui';
 
 @import 'base/reset';
