--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -17,6 +17,7 @@
 @import 'layout/footer';
 @import 'layout/sidebar';
 @import 'layout/forms';
+@import 'layout/profile';
 
 @import 'components/buttons';
 @import 'components/carousel';
