--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -18,6 +18,7 @@
 @import 'layout/sidebar';
 @import 'layout/forms';
 @import 'layout/profile';
+@import 'layout/main-section';
 
 @import 'components/buttons';
 @import 'components/carousel';
