--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $montserrat: 'Montserrat', sans-serif;
 // Pesos de fuentes
 $montserrat-bold: 700;
 $montserrat-medium: 500;
+$montserrat-x-light: 200;
 $poppins-medium: 500;
 
 // Tamaño fuentes
