--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -12,7 +12,10 @@
         margin-left: auto;
     }
     &__icon {
-        padding-right: 1rem;
+        padding-left: 1rem;
         font-size: $large;
+    }
+    &__icon--menu {
+        color: $gray;
     }
 }
