--- a/assets/sass/layout/_profile.scss
+++ b/assets/sass/layout/_profile.scss
@@ -25,7 +25,7 @@
         margin: 0;
     }
     &__button {
-        border-radius: 0 !important;
+        border-radius: 0;
     }
     &__button--message {
         background-color: $light-blue;
