--- a/assets/sass/layout/_main-section.scss
+++ b/assets/sass/layout/_main-section.scss
@@ -8,12 +8,12 @@
         font-family: $montserrat;
         font-weight: $montserrat-bold;
         font-size: $medium;
-        padding: 0;
+        padding: 0.3rem 0;
         margin: 0;
     }
     &__stadistics {
         font-family: $montserrat;
-        font-weight: $montserrat-medium;
+        font-weight: $montserrat-x-light;
         font-size: $medium;
         padding: 0;
         margin: 0;
