--- a/assets/sass/layout/_profile.scss
+++ b/assets/sass/layout/_profile.scss
@@ -2,7 +2,7 @@
     padding: 1.3rem 0;
     
     &__avatar {
-        display: inline-block;
+        display: flex;
     }
     &__img {
         border-radius: 50%;
